--- a/eat.html
+++ b/eat.html
@@ -770,9 +770,12 @@ groups. ## Inferential results</p>
 <div id="discussion-and-conclusion" class="section level2" number="3.3">
 <h2><span class="header-section-number">3.3</span> Discussion and
 Conclusion</h2>
-<p>i reject the null hypothesis due to the P value which is very small.
-Therefore i conclude there is a relationship between ethnic groups and
-the rate at which they go out to eat.</p>
+<p>i reject the null hypothesis between the white and black groups
+because the p value was too small. With that being said the p value
+between black and other was too high so i fail to reject the null
+hypothesis. The same applies to white and other in which the p value was
+also low. Overall there is a difference between the ethnic groups
+besides the other which there is no difference.</p>
 </div>
 </div>
 
